--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -10,7 +10,7 @@
     <nav class="right">
     <% if (authenticated && user) { %>
       <img src="<%= user.photos[0].value %>" alt="<%= user.username %>" width="42">
-      <a href="/logout" class="btn blue">logout</a>
+      <a href="/logout" class="btn red">logout</a>
     <% } else { %>
       <a href="/auth/twitter" class="btn blue">Log In</a>
     <% } %>
