--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -32,6 +32,7 @@
 
   <div class="wrapper">
     <div id="editor"></div>
+    <%- partial('partials/_edit_ui') %>
   </div>
 
   <script src="/bower_components/jquery/jquery.js"></script>
