--- a/views/partials/_edit_ui.ejs
+++ b/views/partials/_edit_ui.ejs
@@ -3,5 +3,5 @@
   <input class="city" type="text" placeholder="City"></input>
   <a class="btn blue point">New Point</a>
   <a class="btn blue line">New Line</a>
-  <a class="btn red">Done Editing</a>
+  <a class="btn done red">Done Editing</a>
 </div>
