--- a/app/scss/_editor.scss
+++ b/app/scss/_editor.scss
@@ -50,7 +50,6 @@
     @include box-sizing(border-box);
     @include border-radius(0px);
     width: 100%;
-    // text-align:center;
     display: block;
     border: 2px solid $blue;
     background-color: $cream;
@@ -64,28 +63,34 @@
       background-color: $blue;
     }
   }
+
   .point {
     border-bottom: none;
   }
-  .point:before {
+
+  .point:after {
     content: "";
     display: inline-block;
     width:  32px;
     height: 32px;
-    background: url('../img/point2.png') left center no-repeat transparent;
+    float: right;
+    background: url('../img/pointBlue.png') left center no-repeat transparent;
+    margin-top: -3px;
     background-size: 28px;
-    vertical-align: -12px;
-    // margin-left: -16px;
   }
-  .line:before {
+  .line:after {
     content: "";
     display: inline-block;
     width:  32px;
     height: 32px;
-    background: url('../img/line2.png') left center no-repeat transparent;
+    float: right;
+    background: url('../img/lineBlue.png') left center no-repeat transparent;
+    margin-top: -3px;
     background-size: 28px;
-    vertical-align: -12px;
-    // margin-left: -16px;
+  }
+  .active {
+    color: $white;
+    background-color: $blue;
   }
   .done {
     margin-top: 1.5em;
@@ -95,6 +100,5 @@
     &:hover {
       background-color: $red;
     }
-
   }
 }
