--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css css/main.css -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
   <!-- endbuild -->
 </head>
 <body>
