--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -3,7 +3,7 @@
     <a class="brand" href="/"><span class="blue">Map</span> <span class="red">Attack</span></a>
     <% if (authenticated) { %>
     <nav class="left">
-      <a href="/editor" class="btn blue">editor</a>
+      <!-- <a href="/editor" class="btn blue">editor</a> -->
     </nav>
     <% } %>
 
