--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,7 +45,7 @@
       </div>
       <div class="game col-group no-padding">
         <div class="col col1of2">
-          <a class="title" href="/game/view">Board Title</a>
+          <a class="title" href="/games/:id">Board Title</a>
         </div>
         <div class="col col1of4">
           <span class="hours">4:30pm</span>
