--- a/views/partials/_edit_ui.ejs
+++ b/views/partials/_edit_ui.ejs
@@ -1,11 +1,16 @@
 <div class="edit-tools">
   <% if (locals.board) { %>
-  <input name="title" class="title" type="text" placeholder="Board Title" value="<%= board.title %>">
-  <input name="city" class="city" type="text" placeholder="City" value="<%= board.city %>">
-  <input type="hidden" name="id" value="<%= board.id %>">
+    <% if (board.properties) { %>
+      <input name="title" class="title" type="text" placeholder="Board Title" value="<%= board.properties.title %>">
+      <input name="city" class="city" type="text" placeholder="City" value="<%= board.properties.city %>">
+    <% } else { %>
+      <input name="title" class="title" type="text" placeholder="Board Title">
+      <input name="city" class="city" type="text" placeholder="City">
+    <% } %>
+    <input type="hidden" name="id" value="<%= board.triggerId %>">
   <% } else { %>
-  <input name="title" class="title" type="text" placeholder="Board Title">
-  <input name="city" class="city" type="text" placeholder="City">
+    <input name="title" class="title" type="text" placeholder="Board Title">
+    <input name="city" class="city" type="text" placeholder="City">
   <% } %>
   <a class="btn tool point">New Point</a>
   <a class="btn tool line">New Line</a>
