--- a/views/partials/_edit_ui.ejs
+++ b/views/partials/_edit_ui.ejs
@@ -14,5 +14,5 @@
   <% } %>
   <a class="btn tool point">New Point</a>
   <a class="btn tool line">New Line</a>
-  <a class="btn done">Done Editing</a>
+  <a class="btn done publish">Publish Board</a>
 </div>
