--- a/app/scss/_editor.scss
+++ b/app/scss/_editor.scss
@@ -5,6 +5,9 @@
   right: 0;
   bottom: 0;
   left: 0;
+  &.short {
+    top: 48px;
+  }
 }
 
 .leaflet-container {
@@ -29,7 +32,6 @@
   padding: 1em;
   margin: 2em;
   background-color: $cream;
-  // border: 2px solid $light-gray;
 
   input[type='text']{
     width: 100%;
@@ -37,7 +39,7 @@
     color: $blue;
     background-color: $cream;
     border: 2px solid $blue;
-    &:first-child{
+    &:first-child {
       border-bottom: none;
     }
     &:hover {
