--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -2,6 +2,9 @@
   background-color: $white;
   padding-top: 72px;
   width: 100%;
+  &.short {
+    padding-top: 48px;
+  }
 }
 
 .top-nav {
@@ -61,6 +64,21 @@
     }
   }
   @include clearfix;
+  &.short {
+    padding: 0 32px;
+    .blue-link {
+      line-height:3em;
+    }
+    .brand {
+      font-size: 1.2em;
+      line-height: 2.5em;
+      &:before {
+        height: 30px;
+        width: 30px;
+        vertical-align: -8px;
+      }
+    }
+  }
 }
 
 .panel {
