--- a/app/scss/_viewer.scss
+++ b/app/scss/_viewer.scss
@@ -30,7 +30,6 @@
     display: inline-block;
     &.blue {
       border-right: 1px solid $cream;
-      background-color: $blue;
       .number {
         float:right;
         font-size: 2em;
@@ -42,7 +41,6 @@
     }
     &.red {
       border-left: 1px solid $cream;
-      background-color: $red;
       .color {
         float:right;
         font-size: 1em;
@@ -55,4 +53,32 @@
   }
 }
 
-
+.leaderboard {
+  width: 200px;
+  z-index: 9999;
+  position: absolute;
+  top: 84px;
+  background-color: $cream;
+  &.blue {
+    left:24px;
+    color: $blue;
+    border: 2px solid $blue;
+    border-top: 12px solid $blue;
+  }
+  &.red {
+    right:24px;
+    color: $red;
+    border: 2px solid $red;
+    border-top: 12px solid $red;
+  }
+  .players {
+    padding: 0 1em;
+  }
+  .player {
+    list-style-type: none;
+    padding: 1em 0;
+    text-indent: 48px;
+    background: transparent url('/img/logo.png') left center no-repeat;
+    background-size: 26px;
+  }
+}
