--- a/views/viewer.ejs
+++ b/views/viewer.ejs
@@ -26,9 +26,9 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <%- partial('partials/_short_nav') %>
+  <%- partial('partials/_transparent_nav') %>
 
-  <div class="wrapper short">
+  <div class="wrapper transparent">
     <section class="scoreboard">
       <header class="title">Board Title<span class="total-players">23 players</span></header>
       <div class="col-group">
