fix bug in transparent nav

--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -13,7 +13,7 @@
   padding: 1em 32px 0.5em;
   margin: 0 auto;
   position: fixed;
-  background: white;
+  background-color: white;
   top: 0;
   right: 0;
   left: 0;
