make transparent nav not get pointer events

--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -5,6 +5,7 @@
   &.transparent {
     background-color: transparent;
     padding-top: 0;
+    pointer-events: none;
   }
 }
 
@@ -61,6 +62,7 @@
     background-color: transparent;
     .brand {
       color: white;
+      pointer-events: auto;
     }
     .white-link {
       color: white;
@@ -73,6 +75,7 @@
     }
     nav {
       margin-top: 12px;
+      pointer-events: auto;
       img {
         border-color: white;
         margin-top:-14px;
