--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -59,6 +59,7 @@
   &.transparent {
     padding: 1em 1.5em 0.5em;
     background-color: transparent;
+    border-bottom: none;
     .brand {
       color: white;
     }
