--- a/app/scss/_editor.scss
+++ b/app/scss/_editor.scss
@@ -20,10 +20,11 @@
   background-color: $darkest-gray;
 }
 
+
 #editor {
   min-height: 320px;
   position: fixed;
-  top: 72px;
+  top: 0;
   right: 0;
   bottom: 0;
   left: 0;
@@ -34,10 +35,10 @@
   width: 300px;
   display: block;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 32px;
+  left: 0;
   padding: 1em;
-  margin: 2em;
+  margin: 2em 2em 2em 1em;
   background-color: $cream;
 
   input[type='text']{
@@ -178,6 +179,9 @@
       &:hover {
         background-color: $red;
         color: $off-white;
+      }
+      &:after {
+        content: "delete";
       }
     }
   }
