--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -28,9 +28,9 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <%- partial('partials/_nav') %>
+  <%- partial('partials/_transparent_nav') %>
 
-  <div class="wrapper">
+  <div class="wrapper transparent">
     <div id="editor"<% if (locals.board || locals.boardId) { %> data-board-id="<%- locals.boardId || findIdInTags(board.tags, 'board') %>"<% } %>></div>
     <%- partial('partials/_edit_ui') %>
   </div>
