move ie warning to partial

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -24,10 +24,7 @@
   <![endif]-->
 </head>
 <body>
-  <!--[if lt IE 10]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-
+  <%- partial('partials/_ie') %>
   <%- partial('partials/_transparent_nav') %>
 
   <div class="wrapper transparent">
