--- a/views/viewer.ejs
+++ b/views/viewer.ejs
@@ -30,7 +30,7 @@
 
   <div class="wrapper transparent">
     <section class="scoreboard">
-      <header class="title">Board Title<span class="total-players">23 players</span></header>
+      <header class="title"><span class="board-title">Board Title</span><span class="total-players">23 players</span></header>
       <div class="col-group">
         <div class="score blue col col1of2 on-blue"><span class="color">Blue</span><span class="number">237</span></div>
         <div class="score red col col1of2 on-red"><span class="number">163</span><span class="color">Red</span></div>
