--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,15 +6,17 @@
     </header>
     <ul class="boards">
       <% boards.forEach(function(board){ %>
-        <li>
-          <a href="/boards/<%= findIdInTags(board.tags, 'board') %>/edit">
-            <% if (board.properties && board.properties.title) { %>
-              <%= board.properties.title %>
-            <% } else { %>
-              Untitled Board
-            <% } %>
-          </a>
-        </li>
+        <% if (findIdInTags(board.tags, 'board:twitter_id') === user.id) { %>
+          <li>
+            <a href="/boards/<%= findIdInTags(board.tags, 'board') %>/edit">
+              <% if (board.properties && board.properties.title) { %>
+                <%= board.properties.title %>
+              <% } else { %>
+                Untitled Board
+              <% } %>
+            </a>
+          </li>
+        <% } %>
       <% }) %>
     </ul>
   </section>
@@ -23,8 +25,8 @@
 <div class="panel cream">
   <section>
     <header>
-      <h2 class="red">Boards Around You</h2>
-      <input class="col col1of3" placeholder="Portland"></input>
+      <h2 class="red">All Boards</h2>
+      <input class="col col1of3" placeholder="Filter by Title/City"></input>
     </header>
     <ul class="boards red">
       <% boards.forEach(function(board){ %>
