--- a/views/partials/_transparent_nav.ejs
+++ b/views/partials/_transparent_nav.ejs
@@ -3,7 +3,7 @@
     <a class="brand" href="/"><span>Map</span> <span>Attack</span></a>
     <nav>
     <% if (authenticated && user) { %>
-      <img src="<%= user.photos[0].value %>" alt="<%= user.username %>" width="42">
+      <img id="user-data" data-id="<%= user.id %>" src="<%= user.photos[0].value %>" alt="<%= user.username %>" width="42">
       <a href="/logout" class="white-link">logout</a>
     <% } else { %>
       <a href="/auth/twitter" class="white-link">Log In</a>
