--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -8,11 +8,14 @@ $darker-gray:    #242323 !default;
 $darkest-gray:   #222222 !default;
 
 $cream:          #FFFBF2 !default;
+$orange:         #FF9843 !default;
 $red:            #F54130 !default;
 $blue:           #5498E8 !default;
 $dark-blue:      #1E6ACA !default;
 
 $body-blue:      darken($blue, 6%);
+
+
 
 
 // Font Families
