--- a/app/scss/_editor.scss
+++ b/app/scss/_editor.scss
@@ -138,8 +138,8 @@
   color: $dark-gray;
   text-align: center;
   vertical-align: center;
-  background-color: $white;
-  border: 1px solid $light-gray;
+  background-color: $light-gray;
+  // border: 1px solid $light-gray;
   @include border-radius(11px);
   &.red {
     background-color: $red;
@@ -149,12 +149,54 @@
     background-color: $blue;
     color: $white;
   }
+  &.p10:after {
+    content: '10';
+  }
+  &.p20 {
+    position: absolute;
+    left: -2px;
+    top: -2px;
+    border: 2px solid $orange;
+    @include border-radius(12px);
+    &:after {
+      content: '20';
+    }
+  }
+  &.p30 {
+    position: absolute;
+    left: -4px;
+    top: -4px;
+    border: 3px solid $orange;
+    @include border-radius(13px);
+    &:after {
+      content: '30';
+    }
+  }
+  &.p50 {
+    position: absolute;
+    left: -4px;
+    top: -4px;
+    border: 4px solid $orange;
+    @include border-radius(14px);
+    &:after {
+      content: '50';
+      // position:absolute;
+      // top: -7px;
+      // left: -7px;
+      // width: 100%;
+      // height: 100%;
+      // padding: 6px;
+      // border: 1px solid $orange;
+      // @include border-radius(16px);
+    }
+  }
 }
 
 .coin-pop {
   button {
     padding: 0 3px;
     margin: 0 3px 0px 3px;
+    background-color: $white;
     color: $dark-gray;
     border: 1px solid $light-gray;
     &.active {
