--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -6,22 +6,17 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Map Attack | Home</title>
+  <title>Map Attack | Editor</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link rel="stylesheet" href="/bower_components/leaflet/leaflet.css">
-  <link rel="stylesheet" href="/bower_components/leaflet.draw/dist/leaflet.draw.css">
+  <link rel="stylesheet" href="/lib/leaflet.css">
+  <link rel="stylesheet" href="/lib/leaflet.draw.css">
   <!--[if lte IE 8]>
-    <link rel="stylesheet" href="/bower_components/leaflet/leaflet.ie.css">
-    <link rel="stylesheet" href="/bower_components/leaflet.draw/dist/leaflet.draw.ie.css">
+    <link rel="stylesheet" href="/lib/leaflet.ie.css">
+    <link rel="stylesheet" href="/lib/leaflet.draw.ie.css">
   <![endif]-->
-  <!-- Base Styles -->
   <link rel="stylesheet" href="/css/main.css">
-  <!-- Theme Styles-->
-  <!--[if lte IE 8]>
-    <script src="/bower_components/html5shiv/dist/html5shiv.js"></script>
-  <![endif]-->
+  <%- partial('partials/_html5shiv') %>
 </head>
 <body>
   <%- partial('partials/_ie') %>
@@ -32,13 +27,10 @@
     <%- partial('partials/_edit_ui') %>
   </div>
 
-  <script src="/bower_components/jquery/jquery.js"></script>
-  <script src="/bower_components/leaflet/leaflet-src.js"></script>
-  <script src="/bower_components/esri-leaflet/dist/esri-leaflet-src.js"></script>
-  <script src="/bower_components/leaflet.draw/dist/leaflet.draw-src.js"></script>
-
+  <script src="/lib/jquery.min.js"></script>
+  <script src="/lib/leaflet.js"></script>
+  <script src="/lib/leaflet.draw.js"></script>
   <%- partial('partials/_ga') %>
-
   <script src="/js/editor.js"></script>
 </body>
 </html>
