--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,10 +9,8 @@
   <title>Map Attack | Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <!-- build:css css/main.css -->
   <link rel="stylesheet" href="/css/main.css">
-  <!-- endbuild -->
+  <%- partial('partials/_html5shiv') %>
 </head>
 <body>
   <%- partial('partials/_ie') %>
@@ -20,16 +18,8 @@
 
   <%- body -%>
 
-  <!-- build:js js/vendor.js -->
-  <!-- bower:js -->
-  <script src="/bower_components/jquery/jquery.js"></script>
-  <!-- endbower -->
-  <!-- endbuild -->
-
+  <script src="/lib/jquery.min.js"></script>
   <%- partial('partials/_ga') %>
-
-  <!-- build:js js/main.js -->
   <script src="/js/main.js"></script>
-  <!-- endbuild -->
 </body>
 </html>
