--- a/app/scss/_editor.scss
+++ b/app/scss/_editor.scss
@@ -182,6 +182,22 @@
   }
 }
 
+.plyr {
+  width: 30px;
+  height: 50px;
+  font-family: $body-font;
+  font-size: 13px;
+  color: $white;
+  text-align: center;
+  vertical-align: center;
+  &.red {
+    background-color: $red;
+  }
+  &.blue {
+    background-color: $blue;
+  }
+}
+
 .coin-pop {
   button {
     padding: 0 3px;
