--- a/app/scss/_boards.scss
+++ b/app/scss/_boards.scss
@@ -86,6 +86,22 @@
     border-left: none;
     color: $body-blue;
   }
+  .red_num {
+    background-color: $red;
+    color: white;
+    padding: 3px 6px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;  
+  }
+  .blue_num {
+    background-color: $blue;
+    color: white;
+    padding: 3px 6px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;  
+  }
   &.label {
     .plain {
       @extend .games-link;
