--- a/views/viewer.ejs
+++ b/views/viewer.ejs
@@ -28,15 +28,15 @@
       <% } else {%>
         <span class="board-title">Awesome Board</span>
       <% } %>
-        <span class="total-players">23 players</span>
+        <span class="total-players">-- players</span>
       </header>
       <div class="col-group">
         <div class="score blue col col1of2 on-blue">
           <span class="color">Blue</span>
-          <span class="number">237</span>
+          <span class="number">--</span>
         </div>
         <div class="score red col col1of2 on-red">
-          <span class="number">163</span>
+          <span class="number">--</span>
           <span class="color">Red</span>
         </div>
     </section>
