--- a/app/scss/_editor.scss
+++ b/app/scss/_editor.scss
@@ -200,11 +200,12 @@
 }
 
 .plyr {
-  width: 30px;
-  height: 50px;
+  width: 26px;
+  height: 41px;
   font-family: $body-font;
   font-size: 13px;
   color: $white;
+  line-height: 1.2;
   text-align: center;
   vertical-align: center;
   &.red {
@@ -212,6 +213,12 @@
   }
   &.blue {
     background-color: $blue;
+  }
+  .player-avatar {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-size: 24px;
   }
 }
 
